--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Flask + Bootstrap + Openshift Template
-===========
-A quickstart template to get going with Flask and Twitter Bootstrap on Openshift.
+# Flask + Bootstrap + Openshift Template
+
+A quickstart template to get going with Flask 0.7.2 and Twitter Bootstrap 3.1.1 on Openshift.
